Tag: fix background color and dark mode (#2521)

--- a/packages/gestalt/src/Tag.css
+++ b/packages/gestalt/src/Tag.css
@@ -14,7 +14,7 @@ html:not([dir="rtl"]) .button {
 }
 
 .secondary {
-  composes: lightGrayBg from "./Colors.css";
+  composes: secondary from "./Colors.css";
 }
 
 .button.secondary:hover,
@@ -27,7 +27,7 @@ html:not([dir="rtl"]) .button {
 }
 
 .errorBase {
-  composes: redBg from "./Colors.css";
+  composes: errorBase from "./Colors.css";
 }
 
 .errorBase:hover,
